--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -4,7 +4,7 @@ hero:
   title: Cushy Text ☁️
   href: /blog/announcing-cushy-text/
   cta: Read The Announcement &raquo;
-  slogan: An Infima-based, component-driven, text-focused interactive and accessible theme for <span class="text--danger">Lume 3</span><sup>+</sup>.
+  slogan: An Infima-based, component-driven, text-focused interactive and fully-responsive theme for <span class="text--danger">Lume 3</span><sup>+</sup>.
 
 goals:
   - title: Comfortable To Build With.
