--- a/src/docs/_data.yml
+++ b/src/docs/_data.yml
@@ -4,7 +4,7 @@ type: docs
 
 docs:
   basedir: /docs/
-  title: Cushy Theme Docs
+  title: "Cushy Theme Docs"
   sidebar: auto
   guest:
     heading: "Latest Blog Post:"
