footer: add link to Open Dyslexic

--- a/src/_data/navbar.yml
+++ b/src/_data/navbar.yml
@@ -70,3 +70,6 @@ footer:
 
       - text: Lume Theme Gallery
         href: "https://lume.land/themes/"
+
+      - text: Open Dyslexic Font
+        href: "https://opendyslexic.org/"
