--- a/src/_data/locale.yml
+++ b/src/_data/locale.yml
@@ -52,7 +52,7 @@ blog_index:
   latest_posts: "Latest Posts:"
   feeds: "/blog Feeds:"
   top_tags: "Recent Tags:"
-  older_posts: '<span style="color:coral">Older posts are</span>'
+  older_posts: '<span style="color:coral">Other posts are</span>'
   older_posts_link: "in the archive"
   toc: "In This Article:"
 
