fix missing punctuation

--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -23,7 +23,7 @@ goals:
     href: /features/#interactive
     cta: Other Interactive Ideas
 
-  - title: SEO Fundamentally Baked-In
+  - title: SEO Fundamentally Baked-In.
     body: |
       SEO plugin catches dozens of mistakes Markdown authors are likely to make; 
       generates a report for every build. Fully-responsive design means users have 
