homepage: accessibility: better content word-break strategy for ctrl++ users.

--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -23,10 +23,10 @@ goals:
     href: /features/#interactive
     cta: Other Interactive Ideas
 
-  - title: SEO Fundamentally Baked-In.
+  - title: SEO-Minded &amp; Responsive.
     body: |
       SEO plugin catches dozens of mistakes Markdown authors are likely to make; 
       generates a report for every build. Fully-responsive design means users have 
       a great experience.
     href: /features/#simple-seo
-    cta: More about SEO & Responsiveness
+    cta: More about SEO &amp; Responsiveness
