localize tag wiki

--- a/src/_data/locale.yml
+++ b/src/_data/locale.yml
@@ -43,8 +43,13 @@ archive:
   posts_by: "Posts By"
   all_posts: "All Posts"
   related_tags: "Related Tags:"
-  edit_wiki: "Edit This Tag Wiki On Github"
+  edit_wiki: "Edit This Tag Wiki On Github (Opens In A New Page)"
   edit_wiki_url: "https://github.com/timthepost/cushytext/edit/main/src/_data/tagWiki.yml"
+  edit_wiki_no_wiki: "This tag has no wiki yet, would you like to create it?"
+  tag_rss_title: "RSS Feed Exclusively For:"
+  tag_json_title: "JSON Feed Exclusively For:"
+  
+  
 
 blog_index:
   blog_home: "Blog Home"
