--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -11,8 +11,7 @@ goals:
     body: |
       MDX powered by Lume 3's new <a href="https://github.com/oscarotero/ssx">SSX</a>
       engine runs blazing fast. Need more control? Just use <a href="https://vento.js.org/">Vento</a>.
-      All with the convenience of <a href="https://infima.dev">Infima</a> components, which are being turned into Lume 3
-      components.
+      All with the convenience of <a href="https://infima.dev">Infima</a> and Lume 3 components.
     href: /blog/0-0-1-component-strategy-update/
     cta: More On Components
 
