--- a/src/_data/locale.yml
+++ b/src/_data/locale.yml
@@ -66,7 +66,7 @@ comp:
   feedback:
     prompt: "Was reading this article a good use of your time?"
     cta: "How could this have been better?"
-    cta_optional: "Text Is Completely Optional!"
+    cta_optional: "Optional &mdash; "
     cta_remaining: "Remaining Characters:"
     clear: "Clear"
     submit: "Submit Feedback"
