micro copy tweak

--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -3,7 +3,7 @@
 hero:
   title: Cushy Text ☁️
   href: /blog/announcing-cushy-text/
-  cta: Read The Announcement
+  cta: Read Tim's Announcement
   slogan: An Infima-based, component-driven, text-focused interactive and fully-responsive theme for <span class="text--danger">Lume 3</span><sup>+</sup>.
 
 goals:
