tagWiki: spruce up interactive-features a bit

--- a/src/_data/tagWiki.yml
+++ b/src/_data/tagWiki.yml
@@ -92,12 +92,17 @@ opinion:
 
 interactive-features:
   summary: >
-    Covers any posts about interactive features that are planned for
-    the theme, or in general when talking about static sites. It doesn't
-    just cover all interactive features, though, it is used in the context
-    of bringing them to static sites using the means we have available,
-    like functions and Deno Deploy.
-  related_tags: ["hybrid-sites"]
+    The interactive features tag covers the interactive features that
+    ship with Cushy Text, as well as conversations in general about 
+    bringing interactive (dynamic) features to static sites, which 
+    are typically very feature-less. 
+
+
+    The Router middleware in Lume 3 re-starts conversations about 
+    expectations of static sites because it enables so many customary
+    features that WordPress users enjoy, like being able to vote on 
+    and rate posts, leave and read comments, and other things.
+  related_tags: ["hybrid-sites", "wordpress", "lume-3"]
 
 static-sites:
   summary: >
