--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "imports": {
-    "lume/": "https://cdn.jsdelivr.net/gh/lumeland/lume@fd8d9c9fafe265fdd2f8d6ac80935fd8f8c48f55/",
-    "lume/cms/": "https://cdn.jsdelivr.net/gh/lumeland/cms@0.7.3/"
+    "lume/": "https://cdn.jsdelivr.net/gh/lumeland/lume@e84ed6b065811810ff85ee0f494f1db843e56ab6/",
+    "lume/cms/": "https://cdn.jsdelivr.net/gh/lumeland/cms@a690046ff703df98e87a304f38e7acc24f598c8b/"
   },
   "tasks": {
     "lume": "echo \"import 'lume/cli.ts'\" | deno run -A -",
@@ -11,7 +11,8 @@
     "mock": "deno run -A --watch src/_serve.ts",
     "clean": "rm -rf _site || true; rm -rf .netlify || true; rm -rf _cache || true",
     "maintainer-clean": "deno task clean || true; rm -rf node_modules || true",
-    "update-deps": "deno run -A --quiet 'https://deno.land/x/nudd@v0.2.8/cli.ts' update plugins.ts deno.json"
+    "update-deps": "deno run -A --quiet 'https://deno.land/x/nudd@v0.2.8/cli.ts' update plugins.ts deno.json",
+    "cms": "deno task lume cms"
   },
   "compilerOptions": {
     "types": [
