--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -12,7 +12,7 @@ goals:
       MDX powered by Lume 3's new <a href="https://github.com/oscarotero/ssx">SSX</a>
       engine runs blazing fast. Need more control? Just use <a href="https://vento.js.org/">Vento</a>.
       All with the convenience of <a href="https://infima.dev">Infima</a> and Lume 3 components.
-    href: /blog/0-0-1-component-strategy-update/
+    href: /docs/components/
     cta: More On Components
 
   - title: Static, But Interactive!
