docs: set menu,visible and menu.order by default

--- a/src/docs/_data.yml
+++ b/src/docs/_data.yml
@@ -1,7 +1,9 @@
 layout: layouts/docs.vto
 waypoint: "%theme-docs%"
 type: docs
-
+menu:
+  visible: true
+  order: 0
 docs:
   basedir: /docs/
   title: "Cushy Theme Docs"
