archive: dress up pagination a bit better

--- a/src/_data/locale.yml
+++ b/src/_data/locale.yml
@@ -34,11 +34,11 @@ archive:
   posts_tagged: "All Posts Tagged "
   tags: "Search By Tag:"
   authors: "Search By Author:"
-  previous: "Previous:"
-  next: "Next:"
+  previous: "Previous Page"
+  next: "Next Page"
   page: "Page"
-  page_of: "of"
-  total_results: "total results."
+  page_of: " of "
+  total_results: "Returned Results"
   things_tagged: "Information About "
   posts_by: "Posts By"
   all_posts: "All Posts"
