Link to Tim's mastodon in footer

--- a/src/_data/navbar.yml
+++ b/src/_data/navbar.yml
@@ -55,6 +55,9 @@ footer:
       - text: Tim's Personal Site For Fiction
         href: "https://timthepost.deno.dev"
 
+      - text: "Tim On Mastodon"
+      - href: https://indieauthors.social/@timthepost
+
   - category: "Other Useful Resources:"
     links:
       - text: Lume Documentation
