--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -4,7 +4,7 @@ hero:
   title: Cushy Text ☁️
   href: /docs/
   cta: Get Started
-  slogan: An Infima-based, component-driven, text-focused interactive and fully-responsive theme for <span class="text--danger">Lume 3</span><sup>+</sup>.
+  slogan: An Infima-based, component-driven, text-focused interactive and fully-responsive theme for <span class="text--danger">Lume 3</span><sup>+</sup>; built <em>by</em> technical writers <em>for</em> technical writers. Blogs, Docs and landing pages that don't suck your will to work.
 
 goals:
   - title: Comfortable To Build With.
