--- a/src/_data/navbar.yml
+++ b/src/_data/navbar.yml
@@ -48,7 +48,7 @@ footer:
         href: "https://discord.gg/ETx8S8cWwH"
 
       - text: "Tim On Mastodon"
-      - href: https://indieauthors.social/@timthepost
+        href: https://indieauthors.social/@timthepost
       
       - text: Lume Discord Server
         href: "https://discord.gg/YbTmpACHWB"
