slogan update (more laconic, for smaller screens)

--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -4,7 +4,7 @@ hero:
   title: Cushy Text ☁️
   href: /docs/
   cta: Get Started
-  slogan: An Infima-based, component-driven, text-focused interactive and fully-responsive theme for <span class="text--danger">Lume 3</span><sup>+</sup>; built <em>by</em> technical writers <em>for</em> technical writers. Create blogs, docs and landing pages without killing your will to work.
+  slogan: An Infima-based, text-focused and interactive theme for <span class="text--danger">Lume 3</span> made for technical content creators. Create blogs, docs and landing pages without killing your will to work.
 
 goals:
   - title: Comfortable To Build With.
