--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -18,7 +18,7 @@ goals:
   - title: Static, But Interactive!
     body: |
       Take advantage of the middleware in Lume3 on Deno Deploy with DenoKV! Static doesn't have
-      to mean stagnate. Comes with a content rating system and form handlers!
+      to mean stagnate. Comes with a content rating system and mini RESTful API!
     href: /features/#interactive
     cta: Other Interactive Ideas
 
