--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "imports": {
-    "lume/": "https://cdn.jsdelivr.net/gh/lumeland/lume@bd475d62d8993dbc63c607498aa7e425901184cb/",
-    "lume/cms/": "https://cdn.jsdelivr.net/gh/lumeland/cms@ba24aa8acb3eefb1cc0ef88c198c468793bcf286/",
+    "lume/": "https://deno.land/x/lume@v3.0.0/",
+    "lume/cms/": "https://cdn.jsdelivr.net/gh/lumeland/cms@0.11.5/",
     "lume/jsx-runtime": "https://deno.land/x/ssx@v0.1.9/jsx-runtime.ts"
   },
   "tasks": {
@@ -31,7 +31,7 @@
       ]
     },
     "plugins": [
-      "https://cdn.jsdelivr.net/gh/lumeland/lume@bd475d62d8993dbc63c607498aa7e425901184cb/lint.ts"
+      "https://deno.land/x/lume@v3.0.0/lint.ts"
     ]
   },
   "fmt": {
